--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage":"https://pranayvips.github.io/portfoli_new",
+  "homepage": "https://pranayvips.github.io/portfoli_new",
   "name": "port-new",
   "private": true,
   "version": "0.0.0",
@@ -27,6 +27,7 @@
     "eslint-plugin-react": "^7.37.4",
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.19",
+    "gh-pages": "^6.3.0",
     "globals": "^15.15.0",
     "react-router-dom": "^7.2.0",
     "vite": "^6.2.0"
